gitops/platform/financial-service-eks/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-web
  namespace: stock-demo
  labels:
    app: stock-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-web
  template:
    metadata:
      labels:
        app: stock-web
    spec:
      containers:
        - name: stock-web
          image: 218549830271.dkr.ecr.ap-northeast-2.amazonaws.com/financial/demo-app-frontend:20260529-c460483
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: stock-web
  namespace: stock-demo
  labels:
    app: stock-web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: stock-web
  ports:
    - name: http
      port: 80
      targetPort: http
